frontend/tests/cases/positive/effects/effApprox.gr
tick' : () <2>
tick' = tick