frontend/tests/cases/negative/effects/effApproxBad.gr
-- Should have type <3>
tick' : () <2>
tick' = let () <- tick; () <- tick; () <- tick in pure ()